--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-select": "^2.1.5",
     "@radix-ui/react-slot": "^1.1.1",
+    "@tanstack/react-query": "^5.66.0",
     "@tanstack/react-table": "^8.20.6",
     "@vitejs/plugin-react": "^4.3.4",
     "class-variance-authority": "^0.7.1",
