--- a/src/main/ui/tsconfig.app.json
+++ b/src/main/ui/tsconfig.app.json
@@ -28,7 +28,8 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "src"
